Add app settings
