# backend/features/app_settings/app_settings_serializers.py
@@ -1,0 +1,9 @@
+from rest_framework import serializers
+
+from backend.models import AppSettings
+
+
+class AppSettingsSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = AppSettings
+        fields = "__all__"
